melhora a descrição do campo de bio de contribuições

--- a/contribua/index.html
+++ b/contribua/index.html
@@ -50,7 +50,7 @@ title: Envie seu post
     <label for="submit_guest_bio" class="visually-hidden">
       Uma pequena descrição sobre você
     </label>
-    <textarea id="submit_guest_bio" name="fields[guest_bio]" placeholder="Fale um pouquinho de você, por favor! Se você já tiver um post publicado aqui, usaremos a mesma bio de antes — a menos que você escreva algo novo aqui ;)"></textarea>
+    <textarea id="submit_guest_bio" name="fields[guest_bio]" placeholder="Fale um pouquinho de você! Se você já tiver um post publicado aqui vamos reutilizar a mesma bio de antes, a menos que você escreva algo novo aqui ;)"></textarea>
   </div>
 
   <button class="submit-button" type="submit">Enviar</button>
