--- a/contribua/index.html
+++ b/contribua/index.html
@@ -9,7 +9,7 @@ title: Envie seu post
 
 <p>Não se acanhe, a gente vai adorar.</p>
 
-<form action="https://manteiga.herokuapp.com/v3/entry/github/arthrfrts/paomortadela/main/submit" method="post">
+<form action="https://comment-worker.arthrfrts.workers.dev/handle/form" method="post">
   <div class="submit-title-field">
     <label for="submit_title" class="visually-hidden">
       Nome
